--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>Understanding the weird parts of JavaScript</h1>
 
 
-        <script src="script.js" async defer></script>
+        <!-- <script src="script.js" async defer></script> -->
+        <script src="testing.js" async defer></script>
     </body>
 </html>
